Removed old logging and added first content to the library component

--- a/src/components/layout/Sidebar.scss
+++ b/src/components/layout/Sidebar.scss
@@ -20,6 +20,9 @@
         display: block;
         border-radius: 8px;
     }
+    .router-link:hover {
+        background-color: darkslategrey;
+    }
     .link-light{
         text-decoration: none;
     }
