--- a/src/pages/searchResults/DetailedSearchResults.scss
+++ b/src/pages/searchResults/DetailedSearchResults.scss
@@ -14,6 +14,9 @@
 .options-menu {
     cursor: pointer;
 }
+.dropdown-item {
+    cursor: pointer !important;
+}
 .modal-container {
     background-color: #343434 !important;
 }
