Added a component for the player and rudimentary audio player behaviour

--- a/src/pages/searchResults/DetailedSearchResults.scss
+++ b/src/pages/searchResults/DetailedSearchResults.scss
@@ -20,3 +20,7 @@
 .modal-container {
     background-color: #343434 !important;
 }
+.link-light:hover {
+    text-decoration: underline !important;
+    cursor: pointer;
+}
