--- a/src/components/layout/player/Player.scss
+++ b/src/components/layout/player/Player.scss
@@ -1,6 +1,6 @@
 .player-container {
     padding-top: 1px;
-    width: 100vw;
+    width: 100%;
     height: 80px;
     position: fixed;
     bottom: 0;
@@ -11,11 +11,11 @@
     align-items: center;
 }
 .player-buttons {
-    width: 255px;
+    width: 350px;
 }
 audio {
     width: 1000px;
-    height:100px;
+    height: 100px;
 }
 
 audio::-webkit-media-controls-panel {
