Added volume to local store to keep it persistent across songs, added placeholder queue store for songs queue

--- a/src/pages/searchResults/DetailedSearchResults.scss
+++ b/src/pages/searchResults/DetailedSearchResults.scss
@@ -24,3 +24,10 @@
     text-decoration: underline !important;
     cursor: pointer;
 }
+.playlist-modal-row {
+    align-items: center;
+}
+.playlist-add-button:hover {
+    color: #198754 !important;
+    cursor: pointer;
+}
