--- a/src/components/layout/Sidebar.scss
+++ b/src/components/layout/Sidebar.scss
@@ -20,8 +20,9 @@
         display: block;
         border-radius: 8px;
     }
-    .router-link:hover {
-        background-color: darkslategrey;
+    a:hover {
+        background-color: #4b4b4b;
+        text-decoration: none !important;
     }
     .link-light{
         text-decoration: none;
