--- a/src/pages/searchResults/DetailedSearchResults.scss
+++ b/src/pages/searchResults/DetailedSearchResults.scss
@@ -31,3 +31,35 @@
     color: #198754 !important;
     cursor: pointer;
 }
+.play-icon {
+    height: auto;
+    width: 50%;
+    background-color: black;
+    border-radius: 50%;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    top: 55%;
+    left: 50%;
+    aspect-ratio: 1;
+    opacity: 0.7;
+    transition: all 0.3s ease-in-out;
+    cursor: pointer;
+}
+.album-cover {
+    position: relative;
+    .play-icon {
+        display: none;
+    }
+
+    &:hover {
+        .play-icon {
+            display: flex;
+        }
+        h5 {
+            text-decoration: underline !important;
+        }
+    }
+}
