--- a/src/components/layout/PageHeader.scss
+++ b/src/components/layout/PageHeader.scss
@@ -17,7 +17,7 @@
     border-bottom-right-radius: 0px;
 }
 .form-control.search-bar:focus + .search-results{
-    position: fixed;
+    position: absolute !important;
     display: block;
     top: 48px;
     left: auto;
