Finalised search for now

--- a/src/components/layout/PageHeader.scss
+++ b/src/components/layout/PageHeader.scss
@@ -67,3 +67,7 @@
 ::-webkit-scrollbar-thumb:hover {
   background: #197a4d;
 }
+.search-results-item:hover {
+    cursor: pointer;
+    background-color: #131313;
+}
