--- a/src/components/layout/player/Player.scss
+++ b/src/components/layout/player/Player.scss
@@ -1,15 +1,3 @@
-.player-container {
-    padding-top: 1px;
-    width: 100%;
-    height: 80px;
-    position: fixed;
-    bottom: 0;
-    top: auto;
-    left:0;
-    right: auto;
-    display: flex;
-    align-items: center;
-}
 .player-buttons {
     width: 350px;
 }
@@ -73,6 +61,7 @@ audio::-webkit-media-controls-timeline-container {
   opacity: 0.7;
   // overflow: hidden;
   position: relative;
+  align-self: center;
 }
 
 .player-timeline:hover {
@@ -98,6 +87,7 @@ audio::-webkit-media-controls-timeline-container {
   width:100%;
   padding-top: 20px;
   padding-bottom: 20px;
+  display: flex;
 }
 
 .player-timeline-container:hover {
@@ -135,4 +125,29 @@ audio::-webkit-media-controls-timeline-container {
   position: relative;
   width: 0%;
   transition: width 0.1s linear;
+}
+
+.song-details {
+  height: 30px;
+}
+
+.player-container {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100px;
+  position: fixed;
+  bottom: 0;
+  left:0;
+  right: auto;
+  display: flex;
+  align-items: center;
+}
+.controls-container {
+  display: flex;
+  flex-direction: row;
+  width:100%;
+}
+.skip-button {
+  align-self: center;
 }
