--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,7 @@
-.page-container {
-    display: flex;
+.container-fluid {
+    //height: calc(100vh - 57px)!important;
+}
+.page-content {
+    height: calc(100vh - 57px);
+    overflow-y: auto;
 }
